@@ -1,6 +1,6 @@
 ##########################################################################
 #
-#  Copyright (c) 2008, Image Engine Design Inc. All rights reserved.
+#  Copyright (c) 2008-2011, Image Engine Design Inc. All rights reserved.
 #
 #  Redistribution and use in source and binary forms, with or without
 #  modification, are permitted provided that the following conditions are
@@ -38,19 +38,119 @@ import math
 
 class MeshMergeOpTest( unittest.TestCase ) :
 
-	def testPlanes( self ) :
-
-		p1 = MeshPrimitive.createPlane( Box2f( V2f( -1 ), V2f( 0 ) ) )
-		p2 = MeshPrimitive.createPlane( Box2f( V2f( 0 ), V2f( 1 ) ) )
-
-		merged = MeshMergeOp()( input=p1, mesh=p2 )
-
+	def verifyMerge( self, mesh1, mesh2, merged ) :
+		
+		self.failUnless( mesh1.arePrimitiveVariablesValid() )
+		self.failUnless( mesh2.arePrimitiveVariablesValid() )
+		self.failUnless( merged.arePrimitiveVariablesValid() )
+		
 		for v in PrimitiveVariable.Interpolation.values :
 			i = PrimitiveVariable.Interpolation( v )
 			if i!=PrimitiveVariable.Interpolation.Invalid and i!=PrimitiveVariable.Interpolation.Constant :
-				self.assertEqual( merged.variableSize( i ), p1.variableSize( i ) + p2.variableSize( i ) )
+				self.assertEqual( merged.variableSize( i ), mesh1.variableSize( i ) + mesh2.variableSize( i ) )
+		
+		self.verifyData( mesh1, mesh2, merged )
+		self.verifyData( mesh2, mesh1, merged, flipped=True )
+	
+	def verifyData( self, meshA, meshB, merged, flipped=False ) :
+		
+		for name in meshA.keys() :
+			
+			self.failUnless( name in merged )
+			
+			interpolation = meshA[name].interpolation
+			self.assertEqual( len(merged[name].data), meshA.variableSize( interpolation ) + meshB.variableSize( interpolation ) )
+			
+			offset = meshB.variableSize( interpolation ) if flipped else 0
+			for i in range( 0, len(meshA[name].data) ) :
+				self.assertEqual( merged[name].data[offset + i], meshA[name].data[i] )
+		
+			offset = 0 if flipped else meshA.variableSize( interpolation )
+			if name in meshB and meshB[name].interpolation == interpolation :
+				for i in range( 0, len(meshB[name].data) ) :
+					self.assertEqual( merged[name].data[offset + i], meshB[name].data[i] )
 
-		self.assertEqual( len( merged["P"].data ), len( p1["P"].data ) + len( p2["P"].data ) )
+	def testPlanes( self ) :
+		
+		p1 = MeshPrimitive.createPlane( Box2f( V2f( -1 ), V2f( 0 ) ) )
+		p2 = MeshPrimitive.createPlane( Box2f( V2f( 0 ), V2f( 1 ) ) )
+		merged = MeshMergeOp()( input=p1, mesh=p2 )
+		self.verifyMerge( p1, p2, merged )
+		
+	def testDifferentPrimVars( self ) :
+		
+		p1 = MeshPrimitive.createPlane( Box2f( V2f( -1 ), V2f( 0 ) ) )
+		MeshNormalsOp()( input=p1, copyInput=False )
+		p2 = MeshPrimitive.createPlane( Box2f( V2f( 0 ), V2f( 1 ) ) )
+		self.assertNotEqual( p1.keys(), p2.keys() )
+		merged = MeshMergeOp()( input=p1, mesh=p2 )
+		self.verifyMerge( p1, p2, merged )
+		
+		TriangulateOp()( input=p2, copyInput=False )
+		p2['stIndices'] = PrimitiveVariable( PrimitiveVariable.Interpolation.FaceVarying, IntVectorData( [ 0, 1, 2, 3, 4 ,5 ] ) )
+		MeshTangentsOp()( input=p2, copyInput=False )
+		self.assertNotEqual( p1.keys(), p2.keys() )
+		merged = MeshMergeOp()( input=p1, mesh=p2 )
+		self.verifyMerge( p1, p2, merged )
+
+	def testSamePrimVarNamesWithDifferentInterpolation( self ) :
+		
+		plane = MeshPrimitive.createPlane( Box2f( V2f( -1 ), V2f( 0 ) ) )
+		del plane["s"]
+		del plane["t"]
+		MeshNormalsOp()( input=plane, copyInput=False )
+		box = MeshPrimitive.createBox( Box3f( V3f( 0 ), V3f( 1 ) ) )
+		MeshNormalsOp()( input=box, copyInput=False )
+		FaceVaryingPromotionOp()( input=box, copyInput=False, primVarNames=StringVectorData( [ "N" ] ) )
+		self.assertEqual( plane.keys(), box.keys() )
+		merged = MeshMergeOp()( input=plane, mesh=box )
+		del box["N"]
+		self.verifyMerge( plane, box, merged )
+
+	def testRemovePrimVars( self ) :
+		
+		p1 = MeshPrimitive.createPlane( Box2f( V2f( -1 ), V2f( 0 ) ) )
+		MeshNormalsOp()( input=p1, copyInput=False )
+		p2 = MeshPrimitive.createPlane( Box2f( V2f( 0 ), V2f( 1 ) ) )
+		self.assertNotEqual( p1.keys(), p2.keys() )
+		merged = MeshMergeOp()( input=p1, mesh=p2, removeNonMatchingPrimVars=False )
+		self.failUnless( "N" in merged )
+		merged = MeshMergeOp()( input=p1, mesh=p2, removeNonMatchingPrimVars=True )
+		self.failUnless( "N" not in merged )
+		del p1["N"]
+		self.verifyMerge( p1, p2, merged )
+		
+		TriangulateOp()( input=p2, copyInput=False )
+		p2['stIndices'] = PrimitiveVariable( PrimitiveVariable.Interpolation.FaceVarying, IntVectorData( [ 0, 1, 2, 3, 4 ,5 ] ) )
+		MeshTangentsOp()( input=p2, copyInput=False )
+		self.assertNotEqual( p1.keys(), p2.keys() )
+		merged = MeshMergeOp()( input=p1, mesh=p2, removeNonMatchingPrimVars=False )
+		self.failUnless( "uTangent" in merged )
+		self.failUnless( "vTangent" in merged )
+		self.failUnless( "stIndices" in merged )
+		merged = MeshMergeOp()( input=p1, mesh=p2, removeNonMatchingPrimVars=True )
+		self.failUnless( "uTangent" not in merged )
+		self.failUnless( "vTangent" not in merged )
+		self.failUnless( "stIndices" not in merged )
+		del p2["uTangent"]
+		del p2["vTangent"]
+		del p2["stIndices"]
+		self.verifyMerge( p1, p2, merged )
+	
+	def testReferencedData( self ) :
+		
+		p1 = MeshPrimitive.createPlane( Box2f( V2f( -1 ), V2f( 0 ) ) )
+		p1["Pref"] = p1["P"]
+		p2 = MeshPrimitive.createPlane( Box2f( V2f( 0 ), V2f( 1 ) ) )
+		merged = MeshMergeOp()( input=p1, mesh=p2 )
+		self.failUnless( "Pref" in merged )
+		self.verifyMerge( p1, p2, merged )
+		
+		del p1["Pref"]
+		p2["Pref"] = p2["P"]
+		merged = MeshMergeOp()( input=p1, mesh=p2 )
+		self.failUnless( "Pref" in merged )
+		self.verifyMerge( p1, p2, merged )
 
 if __name__ == "__main__":
     unittest.main()
